maze.shortestpath.ShortestPathMaze.scala.code
override def run() 
{
  var hauteur = getMondeHauteur();
  var largeur = getMondeLargeur();
  
 	for (i<-0 to largeur-1) 
  {
    for(j<-0 to hauteur-1)
    {
      if (aBiscuit(i,j)== true)
      {
        setIndication(i,j,0);
      	var hauteurDepart = j;
        var largeurDepart = i;
      }
    }
  }
  
  if(aMurNord(largeurDepart,hauteurDepart)== true)
  
}
